Guardado en ruta

--- a/Primera limpieza Pandas .ipynb
+++ b/Primera limpieza Pandas .ipynb
@@ -1980,7 +1980,7 @@
    "outputs": [],
    "source": [
     "# Guardando en formato json\n",
-    "df_clean.to_json('/home/jjespper/Escritorio/proyecto_final1.json', orient='records')\n"
+    "df_clean.to_json('./proyecto_final1.json', orient='records')\n"
    ]
   }
  ],
